--- a/src/ssmk/CMakeLists.txt
+++ b/src/ssmk/CMakeLists.txt
@@ -7,10 +7,22 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(calgo)
 
-add_library(sm_ssmk INTERFACE)
+project(ssmk
+	LANGUAGES CXX
+	VERSION 0.1.1.0
+	DESCRIPTION 
+		"Sprite sheet make program library"
+)
+
+add_library(sm_ssmk 
+	src/readConfig.cpp
+)
 add_library(sm::ssmk ALIAS sm_ssmk)
 
-configure_file(include/ssmk/version.hpp.in include/ssmk/version.hpp)
+configure_file(
+	include/ssmk/version.hpp.in 
+	include/ssmk/version.hpp
+)
 
 target_sources(sm_ssmk
 	PUBLIC FILE_SET HEADERS
@@ -19,4 +31,7 @@ target_sources(sm_ssmk
 			"include"
 		FILES 
 			"${CMAKE_CURRENT_BINARY_DIR}/include/ssmk/version.hpp"
+			include/ssmk/context.hpp
+			include/ssmk/ssmk.hpp
+			include/ssmk/exceptions.hpp
 )
