Add more fields to config file

--- a/src/ssmk/tests/CMakeLists.txt
+++ b/src/ssmk/tests/CMakeLists.txt
@@ -4,17 +4,17 @@ file(GLOB TESTS CONFIGURE_DEPENDS
 
 foreach(T ${TESTS})
 	cmake_path(GET T STEM TNAME)
-	add_executable(optim_${TNAME} 
+	add_executable(ssmk_${TNAME} 
 		${T}
 	)
-	target_compile_definitions(optim_${TNAME} 
+	target_compile_definitions(ssmk_${TNAME} 
 		PRIVATE TESTPATH="${CMAKE_CURRENT_LIST_DIR}"
 		PRIVATE TESTFILE="${T}"
 	)
-	target_link_libraries(optim_${TNAME} 
+	target_link_libraries(ssmk_${TNAME} 
 		sm::ssmk
 	)
-	add_test(NAME optim_${TNAME}
-		COMMAND optim_${TNAME}
+	add_test(NAME ssmk_${TNAME}
+		COMMAND ssmk_${TNAME}
 	)
 endforeach()
