Polish up image writting

--- a/src/ssmk/tests/projects/ex1/ssmk.toml
+++ b/src/ssmk/tests/projects/ex1/ssmk.toml
@@ -5,7 +5,6 @@ files = [ 'png', 'test1.png', 'test2.png' ]
 file = "file.png"
 
 [output.packing]
-algorithm = "firstFit"
-order = "increasing"
+algorithm = "treeFit"
+order = "decreasing"
 metric = "height"
-k = 2
