Add interlacing and force opaque settings

--- a/src/ssmk/tests/projects/ex1/ssmk.toml
+++ b/src/ssmk/tests/projects/ex1/ssmk.toml
@@ -8,3 +8,7 @@ file = "file.png"
 algorithm = "treeFit"
 order = "decreasing"
 metric = "width"
+
+[output.png]
+opaque = true 
+interlacing = "none"
