--- a/src/ssmk/tests/projects/ex1/ssmk.toml
+++ b/src/ssmk/tests/projects/ex1/ssmk.toml
@@ -10,5 +10,6 @@ order = "decreasing"
 metric = "width"
 
 [output.png]
-opaque = true 
+opaque = false
+background = [0.5, 0.5, 0.8]
 interlacing = "none"
