--- a/src/ssmk/tests/projects/ex1/ssmk.toml
+++ b/src/ssmk/tests/projects/ex1/ssmk.toml
@@ -10,6 +10,7 @@ order = "decreasing"
 metric = "width"
 
 [output.png]
+compression = 9
 opaque = false
 background = [0.5, 0.5, 0.8]
 interlacing = "none"
