--- a/src/ssmk/tests/projects/ex1/ssmk.toml
+++ b/src/ssmk/tests/projects/ex1/ssmk.toml
@@ -7,7 +7,7 @@ file = "file.png"
 [output.packing]
 algorithm = "treeFit"
 order = "decreasing"
-metric = "width"
+metric = "maxSide"
 
 [output.png]
 compression = 9
