--- a/src/ssmk/tests/CMakeLists.txt
+++ b/src/ssmk/tests/CMakeLists.txt
@@ -2,6 +2,11 @@ file(GLOB TESTS CONFIGURE_DEPENDS
 	*.cpp 
 )
 
+add_subdirectory(pnggen)
+add_custom_target(generate_png ALL pnggen
+	WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/projects/generated/png"
+)
+
 foreach(T ${TESTS})
 	cmake_path(GET T STEM TNAME)
 	add_executable(ssmk_${TNAME} 
